src/scss/main.scss
/* ... */
.copy:last-child {
	margin-bottom: 0;
}
/* sponsor page content formatting */
figure {
	text-align: center;
	margin-bottom: 30px;
 figcaption {
	font-family: NunitoSansLight, sans-serif;
	font-size: 18px;
	line-height: 1.22em;
	margin: 0 auto 0px;
	text-align: left;
 }
}

.section.conf-dates {
	background-color: $brand-blue;
	font-family: NunitoSans, sans-serif;
	padding-top: 22px;
	text-align: center;
}

.conf-header {
	color: $brand-subheader;
	display: block;
	padding-right: 15px;
	text-transform: uppercase;
	@include mq(sm){
		display: inline;
	}
}
.conf-copy {
	color: $brand-white;
	font-size: 24px;
	margin-bottom: 2px;
}

.conf-contact, .conf-last-year {
	@extend .conf-copy;
	font-size: 18px;
	padding: 13px 0 15px;

	a {
		color: $brand-reverse-link;
		padding-right: 10px;
		&:hover {
			color: $brand-reverse-link-hover;
			text-decoration: none;
		}
	}
}
.conf-last-year {
	padding-top: 0;
}

// Speaker section

.section.speakers {
	padding-top: 10px;
	.row {
		&:first-child {
      margin-top: 32px;
    }
    &:last-child {
      margin-bottom: 15px;
    }
    @include mq(xs) {

    }
		@include mq(sm) {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
			text-align: center;
		}
		@include mq(md) {
			flex-wrap: nowrap;
		}
	}
}

.speaker-container {
	display: block;
	@include mq(sm) {
		display: inline-block;
		max-width: 150px;
	}
}

.speaker-name {
	color: $brand-blue;
	font-family: NunitoSansBold, sans-serif;
	font-size: 20px;
	margin-bottom: 0;
	text-transform: uppercase;
	transition: color 0.2s;
	&:hover {
		color: $brand-body-link-hover;
    text-decoration: none;
	}
}
//sprite rules for workshops hosted by two speakers.
.co-workshop-img {
	background-size: 315px;
	background-position: -160px;
	height: 150px;
	width: 150px;
	margin: 0 auto;
	&.indu-and-david {
		background-image: url('../img/speakers/sprite-indu-and-david.png');
		background-position: -160px; //keep it coloured even when not during hover state
		&:hover {
			cursor: pointer;
			cursor: hand;
			background-position: 1px;
		}
	}
	&.no-hover { 
		background-position: 1px; //stop hover since link was removed for co-workshop page
	}
}
/* ... */

